<resources>
    <string name="app_name">RTI Application</string>
    <string name="action_settings">Settings</string>
    <string name="from">From</string>
    <string name="pa">Public Information Officer</string>
    <string name="to">To</string>
    <string name="txt_header_to">To</string>
    <string name="txt_header_subject">Subject matter of the Information</string>
    <string name="txt_header_brief">Brief Description</string>
    <string name="txt_header_questions">Description of information required (Questions)</string>
    <string name="txt_header_period">Period to which the information relates</string>
    <string name="txt_header_claims">Whether the applicant claims exemption as below poverty line</string>
    <string name="txt_header_charge">RTI Application charge</string>
    <string name="hint_name_from">Your name</string>
    <string name="hint_state_from">Your state</string>
    <string name="hint_addressline1_from">Your Address 1</string>
    <string name="hint_addressline2_from">Your Address 2</string>
    <string name="hint_city_from">Your City</string>
    <string name="hint_pin_from">Your PIN Code</string>
    <string name="hint_paoffice_to">Office of Public Authority (PA)</string>
    <string name="hint_paaddressline1_to">Address 1 of PA</string>
    <string name="hint_paaddressline2_to">Address 2 of PA</string>
    <string name="hint_pacity_to">City of PA</string>
    <string name="hint_pastate_to">State of PA</string>
    <string name="hint_papin_to">Pincode</string>
    <string name="txt_subheader_to">Public Information Officer</string>
    <string name="txt_subheader_subject">Application under Right To Information Act, 2005</string>
    <string name="txt_radio1_charge">Court Fee Stamp (Tamil Nadu, Kerala, West Bengal)</string>
    <string name="txt_radio2_charge">Indian Postal Order (To Central Government, Assam, Chandigarh, Delhi, Himachal Pradesh, Karnataka, Uttarakhand, Tripura, Mizoram, Puducherry, Meghalaya, Noida)</string>
    <string name="txt_radio3_charge">Demand Draft (Andaman and Nicobar, Goa, Jharkhand, Manipur, Nagaland)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="txt_status_epf">Status of withdrawal of my Employees Provident Fund (EPF) Account</string>
    <string name="txt_status_pending">Status of pending work in any government department on my complaint</string>
    <string name="txt_enquiry_mla">Enquiry on MLA Constituency Development Funds</string>
    <string name="txt_list_streets">Complete list of all streets and road works carried out</string>
    <string name="txt_status_epf_discription">I have an Employees Provident Fund (EPF) account with my previous employer ____________ (establishment name) establishment based in _____________ (City). I applied for withdrawal of my EPF account on _________ (dd/mm/yy), but I have been waiting for ____ (years) now. I would like to know the following information.</string>
    <string name="txt_status_pending_discription">I made a complaint dated __________ (dd/mm/yy) for the following reason ______________. (Copy of complaint is attached). But no satisfactory action has been taken on my complaint so far. The RPAD receipt number is ___________________ (RTXXXXXXXXXXIN).</string>
    <string name="txt_enquiry_mla_discription">Enquiry on MLA Constituency Development Funds spent by my MLA.</string>
    <string name="txt_list_streets_discription">Complete list of all streets and road works carried out in ______________ ward / road / village.</string>
    <string name="txt_status_epf_q1">1. Copy of inward register showing the date on which my PF/EPF claim application (Form 10 C) was received by your office.</string>
    <string name="txt_status_epf_q2">2. Please let me know the balance in my account excluding interest.</string>
    <string name="txt_status_epf_q3">3. Please let me know the current balance in my account including interest.</string>
    <string name="txt_status_epf_q4">4. As of reply date; please inform me the Name, Designation, phone number and email address of all Officer(s) who are involved in processing of PF/EPF Form 10 C claims.</string>
    <string name="txt_status_epf_q5">5. File number of my PF/EPF claim application ( Form 10 C).</string>
    <string name="txt_status_epf_q6">6. Certified Copy of excerpts of the Rules / Regulation / Notification / Order / Circular / Memo / Norms / Guidelines / Direction, prescribing time frame for processing of Form 10 C claims.</string>
    <string name="txt_status_epf_q7">7. Name and Designation of the officer to complain, on non disposal of the application within the time frame.</string>
    <string name="txt_status_epf_q8">8. Certified copies of all correspondences sent / received for disposal of my application.</string>
    <string name="txt_status_epf_q9">9. Claim ID generated against my claim application.</string>
    <string name="txt_status_epf_q10">10. Please provide me the details of First Appellate Authority u/s 7(8) of RTI Act, 2005 with detailed postal and email address.</string>
    <string name="txt_status_pending_q1">1. Please provide the daily progress made on my complaint.</string>
    <string name="txt_status_pending_q2">2. Names and designations of the officials with whom my complaint was lying during this period. Please intimate the periods, when it was lying with which officer and what was the action taken by that official during that period.</string>
    <string name="txt_status_pending_q3">3. Certified copies of all correspondences sent / received for disposal of my complaint.</string>
    <string name="txt_status_pending_q4">4. According to your Rules / Regulation / Notification / Order / Circular / Memo / Norms / Guidelines / Direction / citizens charter, in how many days should such a matter be dealt with and resolved. Please provide me the certified copy of the relevant document.</string>
    <string name="txt_status_pending_q5">5. Provide me the certified copy of conduct service rule / regulation having provision to take disciplinary action for non adherence to the timeframe.</string>
    <string name="txt_status_pending_q6">6. Provide the certified copy of File Noting related to the complaint.</string>
    <string name="txt_status_pending_q7">7. Provide the certified copy of Work Order pertaining to my complaint, if any.</string>
    <string name="txt_status_pending_q8">8. Please provide me the details of First Appellate Authority u/s 7(8) of RTI Act, 2005 with detailed postal and email address.</string>
    <string name="txt_enquiry_mla_q1">1. Please intimate the constituency in which the following address falls: _______________ (YOUR ADDRESS).</string>
    <string name="txt_enquiry_mla_q2">2. Please provide the following details in a tabular format for all the works / projects awarded during the period __________to ___________for my constituency out of the MLA Constituency Development Fund: a) Name of work / project b) Brief Description of work / project c) Amount sanctioned d) Date of sanction e) Status of Progress f) Name of agency / contractor g) Date of Initiation h) Date of completion i) Date of deadline j) Date of Extended deadline k) Certified copy of the Contracts Document l) Amount paid to the contractor m) Certified copy of the estimate document n) Copy of sketch o) Certified copy of documents / letters related to decision of start of  this work / project p) Name and Designation of Inspection officer.</string>
    <string name="txt_enquiry_mla_q3">3. How much of money for MLA Constituency Development Fund was allotted to him during the current year and how much has been carried over from previous years?</string>
    <string name="txt_enquiry_mla_q4">4. Please provide details of First Appellate Authority u/s 7(8) of RTI Act, 2005 with detailed postal and email address.</string>
    <string name="txt_list_streets_q1">1. Please give a list of all the works / projects related to improvement of roads or streets carried out in my area ____________________________ for past ________ (months / years). The list should contain the name of the work, Work Order No, actual date of start, actual date of completion, amount paid or payable, status of work, list of street / roads covered, Name of the Contractor.</string>
    <string name="txt_list_streets_q2">2. For each of these works, please mention the guarantee clause in contract, if any and whether it has been invoked so far.</string>
    <string name="txt_list_streets_q3">3. Names and designations of the officials to monitor and maintenance of the roads / streets .</string>
    <string name="txt_list_streets_q4">4. Provide me the certified copy of all Quotations submitted by all Bidders.</string>
    <string name="txt_list_streets_q5">5. Provide me the certified copy of Contract document, that is signed by contractor.</string>
    <string name="txt_list_streets_q6">6. Provide me the certified copy of Estimate document.</string>
    <string name="txt_list_streets_q7">7. Name, Designation and mobile number of Inspection Officer.</string>
    <string name="txt_list_streets_q8">8. Certified copy of Inspection report submitted by the Inspection Officer.</string>
    <string name="txt_list_streets_q9">9. After you have prepared the above information, I would like to inspect your measurement books, Work order registers, Quotations, Contract document, Estimate document and Inspection report related to these works to ensure that you have given the complete information.</string>
    <string name="txt_list_streets_q10">10. Please provide details of First Appellate Authority u/s 7(8) of RTI Act, 2005 with detailed postal and email address.</string>
    <string name="txt_custom">Custom Blank Template</string>
    <string name="txt_status_complaint">Status of all corruption complaints from Central Vigilance Commission</string>
    <string name="txt_scholar">Details of Scholarships in a School / College</string>
    <string name="txt_ration">Details of Ration Card</string>
    <string name="txt_oldage">Details of Old age/Widow pensions</string>
    <string name="txt_status_complaint_description">Status of all corruption complaints received by Central Vigilance Commission.</string>
    <string name="txt_scholar_description">Provide the following details relating to the Scholarships in ________________ School / College. I am student of ______________________ (class:school / dept:year:college), belongs to the community _______________ (community), and resident of __________ (village / town / city).</string>
    <string name="txt_ration_description">I am a resident of ____________ Village / Town / City. I have been given Ration card, card number is __________.</string>
    <string name="txt_oldage_description">I receive Old Age/Widow pension. My account no. is __________. But I have not received my pension since __________. I want the following information under Right to Information regarding the same.</string>
    <string name="txt_status_complaint_q1">1. List of all complaints received by the CVC during the period __________(dd/mm/yyyy) to ___________(dd/mm/yyyy) containing brief description of complaint, whether complaint was anonymous, date of complaint, details (name and designation) of official or authority complained against.</string>
    <string name="txt_status_complaint_q2">2. List of the above complaints that were rejected immediately and the ones that were taken up for subsequent investigations. Date of initiating investigations or brief reasons for rejecting, as the case may be.</string>
    <string name="txt_status_complaint_q3">3. List of those taken up for subsequent investigations, have been closed? Brief reasons for closing each one of them.</string>
</resources>