<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/from" />

        <EditText
            android:id="@+id/fromName"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_name_from" >
        </EditText>

        <EditText
            android:id="@+id/fromAdd1"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_addressline1_from" >
        </EditText>

        <EditText
            android:id="@+id/fromAdd2"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_addressline2_from" >
        </EditText>

        <EditText
            android:id="@+id/fromCity"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_city_from" >
        </EditText>

        <EditText
            android:id="@+id/fromState"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_state_from" >
        </EditText>

        <EditText
            android:id="@+id/fromPinCode"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_pin_from" >
        </EditText>

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/to" />

        <TextView
            style="@style/SubHeaderStyle"
            android:text="@string/pa" />

        <EditText
            android:id="@+id/toPa"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_paoffice_to" >
        </EditText>

        <EditText
            android:id="@+id/toAdd1"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_paaddressline1_to" >
        </EditText>

        <EditText
            android:id="@+id/toAdd2"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_paaddressline2_to" >
        </EditText>

        <EditText
            android:id="@+id/toCity"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_pacity_to" >
        </EditText>

        <EditText
            android:id="@+id/toState"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_pastate_to" >
        </EditText>

        <EditText
            android:id="@+id/toPin"
            style="@style/InputFieldStyle"
            android:hint="@string/hint_papin_to" >
        </EditText>
        <TextView
            style="@style/HeaderStyle"
            android:text="@string/txt_header_subject" />
        <TextView
            style="@style/SubHeaderStyle"
            android:text="@string/txt_subheader_subject" />
    </LinearLayout>

</ScrollView>